[tool.poetry]
name = "HFISTA"
version = "1.0.0"
description = ""
authors = ["Stefan Oslowski <stefan.oslowski@manlyastrophysics.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
astropy = "^4.2.1"
numpy = "1.22.4"
scipy = "^1.6.3"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
notebook = "^6.4.0"
pytest = "^6.2.4"
coverage = "^5.5"
pytest-cov = "^2.12.1"
jupytext = "^1.13.0"
jupyter-contrib-nbextensions = "^0.5.1"
ipywidgets = "^7.7.0"
pytest-mock = "^3.7.0"
jupyterthemes = "^0.20.0"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
